# My-Kaggle-WorkSpace

./: .gitignore  README.md
competitions/PredictFutureSales/: main.ipynb
competitions/Titanic/: main.ipynb
competitions/compe_tmp_dir/: solution_en.md
competitions/compe_tmp_dir/notebooks/: tmp.ipynb
competitions/league_of_legends_winning_prediction/: EDA.ipynb  columns.md  meaning_of_columns.md  solution_en.md  solution_ja.md
competitions/league_of_legends_winning_prediction/notebooks/: eda.ipynb  feature_engineering.ipynb  modeling.ipynb
competitions/league_of_legends_winning_prediction/src/: test.py
competitions/table/league_of_legends_winning_prediction/: pyproject.toml
competitions/table/league_of_legends_winning_prediction/configs/: config_lgbm_cvmean.yaml  config_lgbm_cvmean_v2.yaml  config_lgbm_optimized.yaml
competitions/table/league_of_legends_winning_prediction/notebooks/: CV.ipynb  CV.py  eda.py  feature_engineering.ipynb  feature_engineering.py  modeling.ipynb  modeling.py  tuning.ipynb  tuning.py
competitions/table/league_of_legends_winning_prediction/outputs/experiments/: lgbm_cvmean_opt_v1.json  lgbm_cvmean_v1.json  lgbm_cvmean_v2.json
competitions/table/league_of_legends_winning_prediction/src/: ExperimentLogger.py  feature.py
competitions/template/: solution_ja.md
experiments/kaggleBook/ch03/: 02.ipynb
